# SwarmNote

./: .editorconfig  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  biome.json  cliff.toml  components.json  index.html  lefthook.yml  package.json  pnpm-lock.yaml  skills-lock.json  vite.config.ts
.claude/: settings.json
.claude/skills/dev-workflow/: SKILL.md
.claude/skills/project-explore/: SKILL.md
.claude/skills/project-init/: SKILL.md
.claude/skills/project-issue/: SKILL.md
.claude/skills/project-plan/: SKILL.md
.claude/skills/project-sprint-close/: SKILL.md
.claude/skills/project-sprint-new/: SKILL.md
.claude/skills/project-sprint-status/: SKILL.md
.claude/skills/project-status/: SKILL.md
.github/workflows/: ci.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: app.rs  config.rs  document.rs  error.rs  events.rs  fs.rs  identity.rs  keychain.rs  lib.rs  protocol.rs  workspace.rs
crates/core/src/device/: manager.rs  mod.rs  utils.rs
crates/core/src/fs/: mod.rs  ops.rs
crates/core/src/network/: config.rs  dht_key.rs  event_loop.rs  mod.rs  online.rs
crates/core/src/pairing/: code.rs  manager.rs  mod.rs
crates/core/src/protocol/: os_info.rs  pairing.rs  sync.rs  workspace.rs
crates/core/src/workspace/: db.rs  mod.rs
crates/core/src/workspace/sync/: asset_sync.rs  coordinator.rs  doc_sync.rs  full_sync.rs  manager.rs  mod.rs  pending_buffer.rs  workspace_sync.rs
crates/core/src/yjs/: doc_state.rs  manager.rs  mod.rs
crates/entity/: Cargo.toml
crates/mdast-util-to-markdown/: Cargo.toml
crates/mdast-util-to-markdown/src/: configure.rs  gfm.rs  join.rs  lib.rs  state.rs  types.rs  unsafe_patterns.rs
crates/mdast-util-to-markdown/tests/: core_test.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20260330_000003_uuid_stabilization.rs  m20260407_000007_add_device_name.rs
crates/yrs-blocknote/: Cargo.toml
crates/yrs-blocknote/src/: blocks.rs  error.rs  lib.rs  markdown.rs  props.rs  schema.rs  yrs_codec.rs
crates/yrs-blocknote/tests/: blocks_test.rs  compat_test.rs  e2e_test.rs  markdown_test.rs  real_docs_test.rs  yrs_test.rs
dev-notes/: e2e-encryption-design.md  github-project-management-guide.md  mvp-tasks.md  product-vision.md  rust-code-review.md  tech-selection.md
dev-notes/archive/: product-requirements.md  task-breakdown.md
dev-notes/archive/phases/: phase1-networking.md  phase2-editor.md  phase3-encryption.md
dev-notes/archive/research/: p2p-file-transfer-market.md
dev-notes/archive/swarmdrop/: product-requirements.md
dev-notes/blog/: app-core-architecture.md  cm6-migration-tradeoffs.md  external-file-sync-flow.md  p2p-sync-deep-dive.md  system-tray-implementation.md  tauri-yjs-provider.md  workspace-uuid-dataflow.md  yrs-blocknote-architecture.md  yrs-blocknote-deep-dive.md
dev-notes/design/: 01-device-identity.md  02-storage-architecture.md  03-sync-architecture.md  04-permissions.md  05-sharing.md  07-data-model.md  08-e2e-encryption.md  09-decisions.md  10-ui-requirements.md  README.md  UI设计1.pen
dev-notes/knowledge/: editor.md  rust-backend.md  theme-and-styling.md  toolchain.md
dev-notes/research/: blocknote.md  document-sharing-permission-systems.md  file-list-and-sync-patterns.md  mobile-filesystem-and-resources.md  rn-rust-bridge-research.md
dev-notes/ui-design/: desktop.pen
docs/: pnpm-lock.yaml
milestones/v0.1.0/: README.md
milestones/v0.1.0/design/: device-identity.md  layout-design.pen  ui-framework-plan.md
milestones/v0.1.0/features/: blocknote-editor.md  (+9 more)
milestones/v0.2.0/: README.md
milestones/v0.2.1/: README.md
src/: App.css  App.tsx  i18n.ts  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  updater.json
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/: lib.rs
src-tauri/entity/src/devices/: paired_devices.rs
src-tauri/entity/src/workspace/: deletion_log.rs  doc_chunks.rs  documents.rs  folders.rs  mod.rs  permissions.rs  share_invites.rs  workspace_keys.rs  workspaces.rs
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: lib.rs  m20260321_000001_init_devices.rs  m20260321_000002_init_workspace.rs  m20260331_000004_rel_path_unique.rs  m20260401_000005_datetime_text_workspace.rs  m20260401_000006_datetime_text_devices.rs
src-tauri/src/: error.rs  lib.rs  main.rs  tray.rs
src-tauri/src/commands/: document.rs  fs.rs  identity.rs  mod.rs  network.rs  pairing.rs  sync.rs  workspace.rs  yjs.rs
src-tauri/src/config/: mod.rs
src-tauri/src/db/: mod.rs  state.rs
src-tauri/src/db/commands/: document.rs  folder.rs  mod.rs  workspace.rs
src-tauri/src/device/: manager.rs  mod.rs
src-tauri/src/document/: commands.rs  mod.rs
src-tauri/src/fs/: commands.rs  crud.rs  mod.rs  scan.rs  watcher.rs
src-tauri/src/identity/: commands.rs  config.rs  keychain.rs  mod.rs
src-tauri/src/network/: commands.rs  config.rs  dht_key.rs  event_loop.rs  mod.rs  online.rs
src-tauri/src/pairing/: code.rs  commands.rs  manager.rs  mod.rs
src-tauri/src/platform/: event_bus.rs  file_watcher.rs  keychain.rs  mod.rs  workspace_map.rs
src-tauri/src/protocol/: mod.rs
src-tauri/src/sync/: asset_sync.rs  commands.rs  doc_sync.rs  full_sync.rs  manager.rs  mod.rs  pending_buffer.rs
src-tauri/src/workspace/: commands.rs  db.rs  identity.rs  mod.rs  state.rs
src-tauri/src/yjs/: commands.rs  doc_state.rs  manager.rs  mod.rs
src-tauri/tests/: db.rs
src/commands/: document.ts  folder.ts  fs.ts  identity.ts  pairing.ts  upgrade.ts  workspace.ts
src/hooks/: useAppVersion.ts  useAsyncAction.ts  useKeyboardShortcuts.ts  useSyncDisplayState.ts
src/lib/: TauriYjsProvider.ts  commands.ts  dateUtils.ts  markdownMedia.ts  syncDisplay.ts  tauriStore.ts  utils.ts  windowUtils.ts
src/routes/: __root.tsx  index.tsx  onboarding.tsx  settings.tsx  workspace-manager.tsx
src/stores/: editorStore.ts  fileTreeStore.ts  networkStore.ts  notificationStore.ts  onboardingStore.ts  pairingStore.ts  preferencesStore.ts  syncStore.ts  uiStore.ts  upgradeStore.ts  workspaceStore.ts
(+148 files in other folders)
