[workspace]
members = [".", "entity", "migration"]
resolver = "2"

[workspace.dependencies]
sea-orm = { version = "~2.0.0-rc", features = ["sqlx-sqlite", "runtime-tokio", "macros"] }

[package]
name = "swarmnote"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "swarmnote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
swarm-p2p-core = { path = "../libs/core" }
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.4"
thiserror = "2"
directories = "6"
sea-orm = { workspace = true }
entity = { path = "entity" }
migration = { path = "migration" }
uuid = { version = "1", features = ["v7"] }
tokio = { version = "1", features = ["sync", "time", "macros"] }
tokio-util = "0.7"
dashmap = "6"
sha2 = "0.10"
serde_bytes = "0.11"
tauri-plugin-store = "2.4.2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-notification = "2"
tauri-plugin-mcp-bridge = "0.10"
notify = { version = "8", features = [] }
notify-debouncer-mini = "0.6"
rand = "0.9"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

