[package]
name = "swarmnote"
version = "0.2.3"
description = "A Tauri App"
authors = ["you"]
edition.workspace = true

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "swarmnote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "protocol-asset"] }
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
swarm-p2p-core = { path = "../libs/core" }
swarmnote-core = { path = "../crates/core" }
async-trait = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
hostname = "0.4"
thiserror = { workspace = true }
directories = "6"
sea-orm = { workspace = true }
entity = { path = "../crates/entity" }
migration = { path = "../crates/migration" }
uuid = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
dashmap = { workspace = true }
sha2 = { workspace = true }
serde_bytes = "0.11"
blake3 = { workspace = true }
tauri-plugin-store = "2.4.2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-notification = "2"
tauri-plugin-mcp-bridge = "0.10"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
notify = { version = "8", features = [] }
notify-debouncer-mini = "0.6"
rand = "0.9"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
regex-lite = "0.1"
pathdiff = "0.2"
yrs = { version = "0.25", features = ["sync"] }
similar = "2"

[dev-dependencies]
tempfile = "3"
