[package]
name = "swarmnote"
version = "0.2.3"
description = "A Tauri App"
authors = ["you"]
edition.workspace = true

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "swarmnote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon", "image-png", "protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2.4.2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-notification = "2"
tauri-plugin-mcp-bridge = "0.10"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# Core (platform-independent business logic)
swarmnote-core = { path = "../crates/core" }

# libp2p keypair types surface through here for pairing commands
swarm-p2p-core = { path = "../libs/core" }

# Sibling crates
entity = { path = "../crates/entity" }

# Platform-specific: keychain (DesktopKeychain) + file watcher (notify)
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
notify = { version = "8", features = [] }
notify-debouncer-mini = "0.6"

# Helpers
async-trait = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
directories = "6"
log = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
migration = { path = "../crates/migration" }
