[package]
name = "yrs-blocknote"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Bidirectional conversion between Markdown and BlockNote Y.Doc (yrs)"
license = "MIT"
repository = "https://github.com/yexiyue/SwarmNote"
keywords = ["yrs", "yjs", "blocknote", "markdown", "crdt"]
categories = ["data-structures", "text-processing"]

[dependencies]
yrs = "0.25"
markdown = "1.0"
mdast-util-to-markdown = { path = "../mdast-util-to-markdown" }
nanoid = "0.4"
serde = { version = "1", features = ["derive"] }
strum = { version = "0.28", features = ["derive"] }
thiserror = "2"

[dependencies.uuid]
version = "1"
features = ["v7"]
optional = true

[features]
default = []
uuid = ["dep:uuid"]

[dev-dependencies]
serde_json = "1"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pedantic lints we intentionally allow
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
struct_excessive_bools = "allow"   # Styles has 5 bools by design (matches BlockNote schema)
cast_possible_truncation = "allow" # yrs uses u32 offsets, document sizes are bounded
too_many_lines = "allow"           # block_to_mdast match is a clear dispatch table
